# CLib

./: CMakeLists.txt  README.md  array.c  array.h  array_1d.c  array_1d.h  array_2d.c  array_2d.h  array_math.c  errors.h  main.c  math_arrays.c  math_arrays.h  matrix.c  matrix.h  matrix_math.c  matrix_math.h
array/: array.c  array.h  array_math.c  array_math.h
examples/: add_arrays.c  add_matrices.c  add_value_to_array_and_arrays.c  add_value_to_matrix_and_matrices.c  copy_array.c  copy_matrix.c  create_array.c  create_matrix.c  example_logreg_type_1.c  initialization_array.c  initialization_matrix.c  mul_arrays.c  mul_matrices.c  random_initialization_array.c  random_initialization_matrix.c  sub_arrays.c  sub_matrices.c  sub_value_from_array_and_arrays.c  sum_array.c  sum_matrix.c
examples_basic_functions/: add_arrays.c  add_value_to_array_and_arrays.c  add_value_to_matrix_and_matrices.c  copy_matrix.c  create_array.c  div_arrays.c  div_matrices.c  example_matrix_demo.c  mul_arrays.c  mul_matrices.c  sub_value_from_array_and_arrays.c  sub_value_from_matrix_and_matrices.c  sum_matrix.c
examples_full_run/: example_and.c  example_autoencoder.c  example_deep_mlp.c  example_deep_mlp_advanced.c  example_deep_mlp_bn.c  example_iris.c  example_logreg_type_1.c  example_logreg_type_2.c  example_matrix_demo.c  example_or.c  example_random_classification.c  example_regression.c  example_spiral.c  example_xor.c
matrix/: matrix.c  matrix.h  matrix_math.c  matrix_math.h  matrix_umnozenie.h
nn/: activations.c  activations.h  batchnorm.c  batchnorm.h  datasets.c  datasets.h  dense.c  dense.h  dropout.c  dropout.h  example_logreg.c  loss.c  loss.h  optimizer.c  optimizer.h
